--- a/src/app/donuts/donuts.component.html
+++ b/src/app/donuts/donuts.component.html
@@ -5,14 +5,15 @@
 <table>
     <tr>
         <th>API links:</th>
+        <th></th>
         <th>More info:</th>
-        <th>button</th>
     </tr>
     <tr *ngFor="let d of donuts">
         <td><a href="{{d.ref}}">{{d.name}}</a></td>
-        <td><a href="https://grandcircusco.github.io/demo-apis/donuts/{{d.id}}.json">More</a></td>
-        <!-- <td><button (click)="getDonutInfo(d.id)">buttons</button></td> -->
+        <td><button [routerLink]="['/donut-view', d.id]">buttons</button></td>
+        
     </tr>
 </table>
+
 
  
